# Tradexa-Trading-Bot

./: .dockerignore  .gitignore  .vercelignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: index.py
automation-hub/: app.py  auth.py  backtest.py  config.py  conftest.py  requirements.txt  webhook_api.py
automation-hub-dashboard/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
bot/: __init__.py  __main__.py  backtester.py  cli.py  config.py  dashboard.py  dashboard_report.py  events.py  live.py  metrics.py  multi_backtester.py  reporting.py  risk.py  types.py  walkforward.py
configs/: example.yaml
docs/: ADES.md  ANALYTICS_MODULE.md  API_SPEC.md  APP_FLOW_AUDIT.md  DDS.md  DESIGN_SYSTEM.md  DSP.md  FREE_PERSISTENCE.md  MVP_COMPLETION.md  PHASE_10_REVIEW_RETUNE_GATE.md  PHASE_8_PRODUCTION_READINESS.md  PHASE_9_PAPER_EXECUTION.md  PHASE_C_TENANCY.md  QA_REPORT.md  SAD.md  SPRINT_PLAN.md  TES.md  TRD.md  TROUBLESHOOTING.md  UDS.md
examples/: run_backtest.py  run_from_config.py  run_multi_backtest.py  run_paper_crypto.py  run_paper_stocks.py
tests/: test_atr_sizing.py  test_backtester.py  test_bugs.py  test_cash_accounting.py  test_cli.py  test_csv_loader.py  test_dashboard.py  test_dashboard_report.py  test_events.py  test_filters.py  test_indicators.py  test_live_step.py  test_metrics.py  test_mtf_engine.py  test_multi_backtester.py  test_reporting.py  test_risk_limits.py  test_strategy.py  test_synthetic.py  test_trade_mgmt.py  test_trailing_stop.py  test_vercel_api.py  test_walkforward.py
tradexa-charts-kit/: Gauge.tsx  (+7 more)
(+557 files in other folders)
